media_player: fix missing unlock on error

Fixes #26635.